--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </select>
 
 
-            <input onclick="encrypt()" id="btn" type="submit" value="Encrypt">
+            <input onclick="encrypt()" id="btn" type="submit" value="Send">
 
 
         </form>
