--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <body>
     <section>
-        <h2>Encoder Decoder</h2>
+        <h2>Encoder & Decoder</h2>
         <form onsubmit="return false" action="">
 
             <input type="text" name="text" id="input_caesar" placeholder="Enter text here">
 
             <div>
                 <label for="">Key :</label>
-                <input type="number" name="number" id="input_key">
+                <input type="number" name="number" id="input_key" min="0">
             </div>
             <label for="">Encoding type</label>
             <select name="select" id="encoding_type">
